--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,15 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; margin-left: -8px; text-align: center; position: fixed; bottom: 1px; width:100%; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color: #ffffff; }
+    body { text-align: center; font-family: 'Kumbh Sans';}
   </style>
 </head>
 <body>
   <div id="root"></div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/bogdan-gabriel-mindru-1564b61b6/">Mindru Bogdan</a>.
   </div>
 </body>
 </html>
